add service and some utils
