# src/main/java/org/tix/soa2/model/PersonEntity.java
@@ -1,14 +1,12 @@
 package org.tix.soa2.model;
 
-import com.example.model.ColorE;
-import com.example.model.ColorH;
+import com.example.model.Person;
+import com.fasterxml.jackson.annotation.JsonFormat;
 import jakarta.persistence.*;
 import lombok.Getter;
 import lombok.Setter;
-import org.openapitools.jackson.nullable.JsonNullable;
 
 import java.time.LocalDate;
-import java.util.Calendar;
 
 @Getter
 @Setter
@@ -16,16 +14,16 @@ import java.util.Calendar;
 @Table(name = "person_entity")
 public class PersonEntity {
     @Id
-    @GeneratedValue(strategy = GenerationType.SEQUENCE)
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "id", nullable = false)
     private Long id;
-
+    @JsonFormat(pattern = "yyyy-MM-dd")
     private LocalDate birthday;
 
     @Enumerated(EnumType.STRING)
-    private ColorE colorE;
+    private Person.ColorEEnum colorE;
 
     @Enumerated(EnumType.STRING)
-    private ColorH colorH;
+    private Person.ColorHEnum colorH;
 
 }
